solve pr comments